--- a/CalculadoraCompleta/CalculadoraCompleta/CalculadoraCompleta.csproj
+++ b/CalculadoraCompleta/CalculadoraCompleta/CalculadoraCompleta.csproj
@@ -89,6 +89,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CSS\bootstrap.css" />
+    <Content Include="CSS\bootstrap.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
